with normalization step documented

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(bicPLMIX)
 export(binary_group_ind)
 export(freq_to_unit)
 export(gibbsPLMIX)
+export(gibbsPLMIX_with_norm)
 export(gsPLMIX_to_mcmc)
 export(howmanyranked)
 export(is.top_ordering)
